trocado de calça jeans para bermuda

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
             <td>R$ 70.00</td>
             <td>Em estoque</td>
         </tr>
-        <tr> <td>Calça Jeans</td>
+        <tr> <td>bermuda</td>
             <td>Azul</td>
             <td>P</td>
             <td>R$ 160.00</td>
-            <td>Esgotado</td</tr>
+            <td>Esgotado</td> 
+        </tr>
     </table>
     <table>
         <tr>
