trocado de azul para vermelha

--- a/index.html
+++ b/index.html
@@ -25,33 +25,10 @@
             <td>Em estoque</td>
         </tr>
         <tr> <td>bermuda</td>
-            <td>Azul</td>
+            <td>vermelha</td>
             <td>P</td>
             <td>R$ 160.00</td>
             <td>Esgotado</td> 
-        </tr>
-    </table>
-    <table>
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
         </tr>
     </table>
 </body>
